JumpScript/tests/baselines/reference/cloduleWithDuplicateMember1.errors.txt
tests/cases/compiler/cloduleWithDuplicateMember1.jump(2,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(3,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(3,16): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(6,12): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(10,16): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(13,21): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/cloduleWithDuplicateMember1.jump(14,21): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/cloduleWithDuplicateMember1.jump (7 errors) ====
    class C {
        get x() { return 1; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~
!!! error TS2300: Duplicate identifier 'x'.
            return '';
        }
        static foo() { }
               ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    module C {
        export function foo() { }
                        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
        export function x() { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    }